// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[InfoMessage] renders correctly Error 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "stretch",
        "borderRadius": 15,
        "paddingHorizontal": 20,
        "paddingVertical": 10,
      },
      undefined,
      Object {
        "backgroundColor": "rgba(255,91,91,0.06)",
        "borderColor": "rgba(255,91,91,0.06)",
        "tintColor": "#FF5B5B",
      },
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "stretch",
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flex": 1,
            "paddingVertical": 10,
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Array [
              Object {
                "fontFamily": "ProximaNova-Bold",
                "fontSize": 30,
                "textAlign": "center",
              },
              Object {
                "color": "#FF5B5B",
              },
              Object {
                "textAlign": "center",
              },
            ],
          ]
        }
      >
        label
      </Text>
    </View>
  </View>
</View>
`;

exports[`[InfoMessage] renders correctly Info 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "stretch",
        "borderRadius": 15,
        "paddingHorizontal": 20,
        "paddingVertical": 10,
      },
      undefined,
      Object {
        "backgroundColor": "rgba(48,82,255,0.06)",
        "borderColor": "#3052FF",
        "tintColor": "#3052FF",
      },
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "stretch",
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flex": 1,
            "paddingVertical": 10,
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Array [
              Object {
                "fontFamily": "ProximaNova-Bold",
                "fontSize": 30,
                "textAlign": "center",
              },
              Object {
                "color": "#3052FF",
              },
              Object {
                "textAlign": "center",
              },
            ],
          ]
        }
      >
        label
      </Text>
    </View>
  </View>
</View>
`;

exports[`[InfoMessage] renders correctly Warning 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "stretch",
        "borderRadius": 15,
        "paddingHorizontal": 20,
        "paddingVertical": 10,
      },
      undefined,
      Object {
        "backgroundColor": "rgba(248,191,76,0.06)",
        "borderColor": "#F8BF4C",
        "tintColor": "#F8BF4C",
      },
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "stretch",
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flex": 1,
            "paddingVertical": 10,
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Array [
              Object {
                "fontFamily": "ProximaNova-Bold",
                "fontSize": 30,
                "textAlign": "center",
              },
              Object {
                "color": "#F8BF4C",
              },
              Object {
                "textAlign": "center",
              },
            ],
          ]
        }
      >
        label
      </Text>
    </View>
  </View>
</View>
`;

exports[`[InfoMessage] should render with icon Error 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "stretch",
        "borderRadius": 15,
        "paddingHorizontal": 20,
        "paddingVertical": 10,
      },
      undefined,
      Object {
        "backgroundColor": "rgba(255,91,91,0.06)",
        "borderColor": "rgba(255,91,91,0.06)",
        "tintColor": "#FF5B5B",
      },
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "stretch",
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "paddingRight": 10,
          },
        ]
      }
    >
      <Image
        resizeMode="contain"
        source={
          Object {
            "uri": "IconInfo",
          }
        }
        style={
          Array [
            Object {
              "height": 31.428571428571427,
              "width": 31.428571428571427,
            },
            Array [
              Object {
                "tintColor": "#FF5B5B",
              },
            ],
          ]
        }
      />
    </View>
    <View
      style={
        Array [
          Object {
            "flex": 1,
            "paddingVertical": 10,
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Array [
              Object {
                "fontFamily": "ProximaNova-Bold",
                "fontSize": 30,
                "textAlign": "center",
              },
              Object {
                "color": "#FF5B5B",
              },
              Object {
                "textAlign": "left",
              },
            ],
          ]
        }
      >
        label
      </Text>
    </View>
  </View>
</View>
`;

exports[`[InfoMessage] should render with icon Info 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "stretch",
        "borderRadius": 15,
        "paddingHorizontal": 20,
        "paddingVertical": 10,
      },
      undefined,
      Object {
        "backgroundColor": "rgba(48,82,255,0.06)",
        "borderColor": "#3052FF",
        "tintColor": "#3052FF",
      },
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "stretch",
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "paddingRight": 10,
          },
        ]
      }
    >
      <Image
        resizeMode="contain"
        source={
          Object {
            "uri": "IconInfo",
          }
        }
        style={
          Array [
            Object {
              "height": 31.428571428571427,
              "width": 31.428571428571427,
            },
            Array [
              Object {
                "tintColor": "#3052FF",
              },
            ],
          ]
        }
      />
    </View>
    <View
      style={
        Array [
          Object {
            "flex": 1,
            "paddingVertical": 10,
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Array [
              Object {
                "fontFamily": "ProximaNova-Bold",
                "fontSize": 30,
                "textAlign": "center",
              },
              Object {
                "color": "#3052FF",
              },
              Object {
                "textAlign": "left",
              },
            ],
          ]
        }
      >
        label
      </Text>
    </View>
  </View>
</View>
`;

exports[`[InfoMessage] should render with icon Warning 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "stretch",
        "borderRadius": 15,
        "paddingHorizontal": 20,
        "paddingVertical": 10,
      },
      undefined,
      Object {
        "backgroundColor": "rgba(248,191,76,0.06)",
        "borderColor": "#F8BF4C",
        "tintColor": "#F8BF4C",
      },
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "stretch",
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "paddingRight": 10,
          },
        ]
      }
    >
      <Image
        resizeMode="contain"
        source={
          Object {
            "uri": "IconInfo",
          }
        }
        style={
          Array [
            Object {
              "height": 31.428571428571427,
              "width": 31.428571428571427,
            },
            Array [
              Object {
                "tintColor": "#F8BF4C",
              },
            ],
          ]
        }
      />
    </View>
    <View
      style={
        Array [
          Object {
            "flex": 1,
            "paddingVertical": 10,
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Array [
              Object {
                "fontFamily": "ProximaNova-Bold",
                "fontSize": 30,
                "textAlign": "center",
              },
              Object {
                "color": "#F8BF4C",
              },
              Object {
                "textAlign": "left",
              },
            ],
          ]
        }
      >
        label
      </Text>
    </View>
  </View>
</View>
`;
